# Battleships

./: .gitmodules  CMakeLists.txt
src/Game/: main.c
src/TerminalEngine/: Math.c  Math.h
src/TerminalEngine/Renderer/: Renderer.c  Renderer.h
src/TerminalEngine/Windows/: Application.c  Application.h
